--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -72,4 +72,5 @@ $c_mint_30:      rgb(227, 248, 241)
 
 //@import "bulma-0.9.3/bulma/bulma.sass"
 @import "bulma-0.9.3/bulma/sass/base/minireset.sass"
+@import "bulma-0.9.3/bulma/sass/elements/container.sass"
 @import "bulma-0.9.3/bulma/sass/grid/_all.sass"
