--- a/source-assets/styles2021/sass/custom/major-elements.sass
+++ b/source-assets/styles2021/sass/custom/major-elements.sass
@@ -18,15 +18,18 @@ main
 #_side-toc-overall
   @extend .column
   @extend .is-2
+  @extend .container
   background-color: $c_fog_200
 
 
 article
   @extend .column
   @extend .is-8
+  @extend .container
 
 
 #_side-toc-page
   @extend .column
   @extend .is-2
+  @extend .container
   background-color: $c_fog_200
