--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -59,9 +59,9 @@ $c_mint_30:      rgb(227, 248, 241)
 
 //@import "old/footer"
 
-@import "old/content-block"
+@import "old/content-block.sass"
 
-@import "old/content-inline"
+@import "old/content-inline.sass"
 
 //@import "old/print"
 
