sound design by bumi hidaka

--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -7,6 +7,13 @@
 $f_sans: Poppins, Roboto, sans-serif
 $f_mono: 'Roboto Mono', 'RobotoMono', 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace
 
+$i_font_normal: 1rem
+//FIXME: check mono size!
+$i_font_mono: 1.1rem
+$i_font_side_toc: .9rem
+$i_font_menu: .8rem
+$i_font_menu_mini: .7rem
+
 
 // Colors
 
@@ -37,6 +44,9 @@ $c_mint_60:      rgb(199, 241, 227)
 $c_mint_30:      rgb(227, 248, 241)
 
 
+$i_big_head:     135px
+$i_head_offset:  65px
+
 // IMPORTS
 
 // Custom imports
@@ -44,6 +54,8 @@ $c_mint_30:      rgb(227, 248, 241)
 @import "custom/major-elements.sass"
 
 @import "custom/side-toc.sass"
+
+@import "custom/header-menu.sass"
 
 @import "custom/pizzazz.sass"
 
