--- a/source-assets/styles2021/sass/old/content-inline.sass
+++ b/source-assets/styles2021/sass/old/content-inline.sass
@@ -567,13 +567,8 @@ code
   float: right
 
 
-div.variablelist,
-.toc
+div.variablelist
   margin: 24px 0
-
-
-.line > .toc
-  margin: 0
 
 
 .glossary dt,
