mix by emma munger

--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -43,7 +43,7 @@ $c_mint:         rgb(144, 235, 205)
 $c_mint_60:      rgb(199, 241, 227)
 $c_mint_30:      rgb(227, 248, 241)
 
-
+//FIXME suse22: fixed values are ugly
 $i_big_head:     135px
 $i_head_offset:  65px
 
