--- a/source-assets/styles2021/sass/custom/header-menu.sass
+++ b/source-assets/styles2021/sass/custom/header-menu.sass
@@ -2,7 +2,7 @@ header
 
   img.logo
     position: absolute
-    // FIXME yuck px, but it's an image
+    // FIXME suse22 yuck px, but it's an image
     width: 270px
     height: 90px
     top: 20px
@@ -116,7 +116,7 @@ header
   vertical-align: -10%
   margin-right: .3rem
 
-//FIXME: make this pop open later
+//FIXME suse22: make this pop open later
 #searchbox
   display: none
 
