my boss Mr Torey Malatia,

--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -69,7 +69,7 @@ $i_head_offset:  65px
 
 //@import "old/bottom-share-print"
 
-//@import "old/footer"
+@import "old/footer.sass"
 
 @import "old/content-block.sass"
 
