--- a/source-assets/styles2021/sass/old/footer.sass
+++ b/source-assets/styles2021/sass/old/footer.sass
@@ -1,67 +1,116 @@
-// Footer and associated madness, see:
-// http://ryanfait.com/resources/footer-stick-to-bottom-of-page/
-
-#_footer-wrap,
-#_inward
-  height: 80px
-
-
-#_inward
-  z-index: -1
-
-
-#_footer-wrap
-  background-color: $c_pine
-  overflow: hidden
-  width: 100%
-
-
-#_outer-wrap
-  height: 100%
-  height: auto !important
-  margin: 0 auto -80px
-  min-height: 100%
-
-
-.nofooter > #_outer-wrap
-  margin: 0 auto
-
-
-// Footer contents
+// don't bother with a sticky footer -- our <article> uses min-height:100vh 
 
 #_footer
-  margin: 0 auto
-  max-width: 988px
-  min-width: 130px
-  padding: 0 20px
-  z-index: 2; // Else, #_inward overlays the footer
+  color: $c_white
+  font-weight: 800
+  padding-bottom: 3rem
+
+  a
+    color: $c_white
+    text-decoration: none
+
+    &:active,
+    &:focus,
+    &:hover
+      color: $c_white
+      text-decoration: underline
+
+  .footer-topper
+    display: flex
+    position: relative
+    border-bottom: 1px dotted $c_white
+    padding: 2rem 0
+    margin: 0rem 1.5rem 1.5rem
+
+    .footer-links
+      @extend .column
+      @extend .is-10
+      @extend .container
+
+      li
+        display: block
+        float: left
+        margin-right: 2rem
+
+      a
+        line-height: 50px
+
+      .logo
+        width: 153px
+        height: 50px
+
+    .social
+      @extend .column
+      @extend .is-2
+      @extend .container
 
 
-#_footer > ul
-  padding: 0
+    a
+      font-size: $i_font_menu
+
+  .copy
+    font-size: $i_font_menu_mini
+    float: right
+    margin: 0rem 1.5rem
+
+    a
+      font-size: $i_font_menu_mini
+      margin-left: 2rem
 
 
-#_footer > p,
-#_footer li
+// FIXME suse22
+.ignoreeeeee
+  > p,
+  li
+    display: block
+    float: left
+    font-size: 14px
+    line-height: 80px
+    margin: 0 30px 0 0
+
+  > p
+    color: $c_white
+#_footer .social *
+  display: none
+
+
+// FOR THE WIN! suse.com uses an image here, but we use two divs & (ugly) magic.
+.footer-start-line,
+.footer-start-line-inner
   display: block
-  float: left
-  font-size: 14px
-  line-height: 80px
-  margin: 0 30px 0 0
+  width: 100%
 
+  &::before,
+  &::after
+    display: block
+    content: ''
+    width: 100%
+    position: absolute
 
-#_footer a
-  color: $c_white
-  font-weight: 700
-  text-decoration: none
+.footer-start-line
+  background-color: #055540
+  height: 35px
+  position: relative
+  &::before
+    top: 0
+    height: 2px
+    background-color: #35bc8c
+  &::after
+    top: 7px
+    height: 8px
+    background-color: #20a66c
 
-
-#_footer a:active,
-#_footer a:focus,
-#_footer a:hover
-  color: $c_white
-  text-decoration: underline
-
-
-#_footer > p
-  color: $c_white
+.footer-start-line-inner
+  top: 30px
+  height: 5px
+  background-color: #064c39
+  position: absolute
+  &::before
+    top: -4px
+    height: 4px
+    background-color: #008167
+  &::after
+    top: -15px
+    height: 3px
+    z-index: 1
+    background-color: #007157
