suse2022/html: fix issue with unclickable links when footer in view

--- a/source-assets/styles2022/sass/custom/major-elements.sass
+++ b/source-assets/styles2022/sass/custom/major-elements.sass
@@ -167,6 +167,7 @@ main
         @extend .container
         @include m_desktop_up
           content: ''
+          z-index: -1
 
       .side-toc
         @include m_desktop_up
