suse2022/sass/css: Hide feedback links from mobile "On this page" menu

--- a/source-assets/styles2022/sass/custom/side-toc.sass
+++ b/source-assets/styles2022/sass/custom/side-toc.sass
@@ -51,6 +51,7 @@ $you_are_here_weight: 600
       font-style: normal
 
 
+// "On this page"
 #_side-toc-page
   @include m_tablet
     background-color: $c_white
@@ -71,6 +72,12 @@ $you_are_here_weight: 600
     @include m_tablet
       display: none
 
+  .feedback
+    @include m_tablet
+      display: none !important
+
+
+// Book ToC
 #_side-toc-overall
 
   ol
