suse2022/sass/css: Compact admon title/height fix

--- a/source-assets/styles2022/sass/custom/content-admonition.sass
+++ b/source-assets/styles2022/sass/custom/content-admonition.sass
@@ -60,10 +60,9 @@
       margin-left: 0
       width: 24px
 
-    // FIXME: does not look correct with multi-line items.
     > h6
-      color: #666
-      height: 24px
+      height: unset
+      color: $c_pine
 
     > p:nth-child(1)
       margin-top: 0 !important
