suse2022/sass/css: Move mobile menu button to the right
The mobile menu button used to interfere with the document title a bit
much. It's a bit illogical to click a button on the right that makes a
menu appear on the left, but it's not _that_ bad.
(The new placement also makes it even more apparent that the button
design/placement is mostly nicked from fandom.com, but so be it.)

--- a/source-assets/styles2022/sass/custom/major-elements.sass
+++ b/source-assets/styles2022/sass/custom/major-elements.sass
@@ -238,7 +238,7 @@ footer
         &.mobile-visible
           display: block
           position: absolute !important
-          left: calc(40px + 1.5rem)
+          left: calc(.75rem)
           top: calc(.75rem - .2rem + #{$i_menu_button_size})
           width: 300px
           height: auto
