--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -1456,7 +1456,7 @@ footer {
     main .side-toc#_side-toc-page.mobile-visible {
       display: block;
       position: absolute !important;
-      left: calc(40px + 1.5rem);
+      left: calc(.75rem);
       top: calc(.75rem - .2rem + 60px);
       width: 300px;
       height: auto;
@@ -2058,7 +2058,7 @@ body.disable-language-switcher #_utilitynav #_utilitynav-language {
   font-weight: normal;
   padding: 0.5rem 1rem;
   max-width: 75%; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1024px) {
     .version-info {
       position: static !important;
       margin-top: 1.5rem;
@@ -2089,7 +2089,7 @@ body.scroll-up main.sticky article .version-info {
   display: block;
   position: absolute;
   top: .75rem;
-  left: -20px;
+  right: -20px;
   height: 60px;
   width: 60px;
   border-radius: 50%;
@@ -2097,10 +2097,9 @@ body.scroll-up main.sticky article .version-info {
   outline: none;
   background-color: #fe7c3f;
   background-repeat: no-repeat;
-  background-position: 70% 50%;
+  background-position: 30% 50%;
   background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="%230c322c" d="M 6,6.5 A 1.5,1.5 0 0 0 4.5,8 1.5,1.5 0 0 0 6,9.5 a 1.5,1.5 0 0 0 1.5,-1.5 1.5,1.5 0 0 0 -1.5,-1.5 z m 3,0.5 V 9 H 27 V 7 Z M 11,11 v 2 h 16 v -2 z m 0,4 V 17 H 27 V 15 Z M 6,18.5 A 1.5,1.5 0 0 0 4.5,20 a 1.5,1.5 0 0 0 1.5,1.5 1.5,1.5 0 0 0 1.5,-1.5 1.5,1.5 0 0 0 -1.5,-1.5 z m 3,0.5 v 2 H 27 V 19 Z M 11,23 v 2 h 16 v -2 z" /></svg>');
-  z-index: 8000;
-  transition: left 0.2s ease-in; }
+  z-index: 8000; }
   #_open-side-toc-overall:hover {
     background-color: #fe9f72; }
   @media screen and (min-width: 1024px) {
@@ -2132,7 +2131,6 @@ body.scroll-up main.sticky #_open-side-toc-overall {
   vertical-align: middle;
   font-family: Poppins, Roboto, sans-serif;
   padding: 0 2rem;
-  margin-left: calc(40px + .75rem);
   color: #0c322c;
   background-color: #30ba78;
   border: 0.2rem solid #0c322c;
