Fix #463: Use correct inline color for screen
Some inline elements inside <screen> like <filename>
got hidden as it was rendered with the wrong color.

Using inherit instead of $c_pine to display it correctly.

--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -3153,7 +3153,7 @@ article a:hover code {
   padding: 0; }
 
 .verbatim-wrap code {
-  color: #0c322c; }
+  color: inherit; }
 
 .verbatim-wrap .command {
   color: #bfcbfb; }
