Spielwiese für .report-bug

--- a/source-assets/styles2022/sass/custom/permalink.sass
+++ b/source-assets/styles2022/sass/custom/permalink.sass
@@ -11,13 +11,15 @@
     color: $c_funky_darker_jungle !important
 
   .report-bug
-    opacity: 0.3
+    // opacity: 0.3
     font-weight: normal
     text-decoration: none
     // Clean the below up in Q3 2013 or so...
     -webkit-transition: opacity 0.2s ease-in-out 0.1s
     -moz-transition: opacity 0.2s ease-in-out 0.1s
-    transition: opacity 0.2s ease-in-out 0.1s
+    // transition: opacity 0.2s ease-in-out 0.1s
+    
+    
 
 
 *:hover,
@@ -38,6 +40,8 @@
     text-transform: uppercase
     display: inline-block
     float: right
+    // background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 4.233333 4.233333"><path fill="#{$c_white_url}" d="M 2.1161296,4.2333333 H 1.3229166 V 2.1166667 H 0.79375 v -0.79375 H 1.3229166 V 0.94898097 C 1.3229166,0.3538802 1.5568427,0 2.257843,0 H 2.9104167 V 0.7295885 H 2.4766852 c -0.2729309,0 -0.3594814,0.10194397 -0.3594814,0.2922323 l -0.00106,0.3010959 H 2.9104151 L 2.8,2.1166667 H 2.1161454 Z" /></svg>')
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 4.233333 4.233333"><path fill="#{$c_white_url}" d="M 2.1161296,4.2333333 H 1.3229166 V 2.1166667 H 0.79375 v -0.79375 H 1.3229166 V 0.94898097 C 1.3229166,0.3538802 1.5568427,0 2.257843,0 H 2.9104167 V 0.7295885 H 2.4766852 c -0.2729309,0 -0.3594814,0.10194397 -0.3594814,0.2922323 l -0.00106,0.3010959 H 2.9104151 L 2.8,2.1166667 H 2.1161454 Z" /></svg>')
 
     &:hover,
     &:focus,
@@ -48,3 +52,4 @@
 
 *:hover > .report-bug
     opacity: 1
+
