--- a/suse2022-ns/static/css/style.css
+++ b/suse2022-ns/static/css/style.css
@@ -2042,7 +2042,6 @@ body.disable-language-switcher #_utilitynav #_utilitynav-language {
 .big-version-info {
   background-color: #c7f1e3;
   color: #0c322c;
-  float: left;
   font-size: 24px;
   line-height: 100%;
   margin: 75px 0 0;
@@ -2248,6 +2247,9 @@ h5,
 h6 {
   color: #0c322c; }
 
+h1:has(.title-container) {
+  padding: 80px 0 80px; }
+
 .article .title,
 .book .title,
 .set .title {
@@ -2255,7 +2257,6 @@ h6 {
   font-size: 48px;
   font-weight: 600;
   line-height: 120%;
-  padding: 70px 0 50px;
   width: auto; }
   .article .title .citetitle,
   .book .title .citetitle,
@@ -2380,6 +2381,43 @@ h2 {
 .subtitle em,
 .title em {
   font-style: normal; }
+
+.title-container {
+  display: flex;
+  flex-flow: row wrap;
+  clear: both; }
+
+.title-container .title,
+.title-container .table-title-wrap,
+.title-container .figure-title-wrap,
+.title-container .procedure-title-wrap,
+.title-container .itemizedlist-title-wrap,
+.title-container .orderedlist-title-wrap {
+  flex: 8; }
+
+.title-container .icons {
+  flex: 1;
+  margin-top: auto;
+  text-align: right; }
+
+.icon-reportbug {
+  margin-right: 1rem; }
+
+.icon-editsource,
+.icon-reportbug {
+  width: 23.07px;
+  height: 26.21px;
+  display: inline-block; }
+
+.icon-editsource {
+  background: url("../images/edit-source-green.svg") no-repeat; }
+  .icon-editsource:hover {
+    background: url("../images/edit-source-dark.svg") no-repeat; }
+
+.icon-reportbug {
+  background: url("../images/report-bug-green.svg") no-repeat; }
+  .icon-reportbug:hover {
+    background: url("../images/report-bug-dark.svg") no-repeat; }
 
 .informaltable,
 .table-contents {
