Fix #DOCTEAM-778: Adjust HTML headings (SEO)
To improve SEO, formal and admonition titles changes
from <h6> to <div class="admon-title">

--- a/source-assets/styles2022/sass/custom/content-admonition.sass
+++ b/source-assets/styles2022/sass/custom/content-admonition.sass
@@ -7,7 +7,7 @@
     margin: 0 10px 0 0
     width: 36px
 
-  > h6
+  > .admon-title
     font-weight: 600
     color: $c_pine
 
@@ -20,7 +20,7 @@
     border-width: .2rem
     padding: 10px
 
-    > h6
+    > .admon-title
       display: table-cell
       height: 36px
       vertical-align: middle
@@ -60,7 +60,7 @@
       margin-left: 0
       width: 24px
 
-    > h6
+    > .admon-title
       height: unset
       color: $c_pine
 
