--- a/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
+++ b/source-assets/styles2022/sass/custom/content-mono-verbatim.sass
@@ -61,7 +61,7 @@ code
     display: inline
     padding: 0 !important
 
-.admonition h6,
+.admonition .admon-title,
 .name,
 a
   .literal,
@@ -71,7 +71,7 @@ a
     color: inherit
 
 
-.admonition h6
+.admonition .admon-title
   .replaceable,
   code
     border-color: $c_fog_200
