--- a/source-assets/styles2022/sass/custom/content-xref-target.sass
+++ b/source-assets/styles2022/sass/custom/content-xref-target.sass
@@ -8,7 +8,7 @@
 
 // unfortunately we need these super-specific selectors to avoid highlighting
 // <phrase/> etc. headlines
-.admonition:target > h6,
+.admonition:target > .admon-title,
 *:target > .titlepage:nth-child(1) h1 > span,
 *:target > .titlepage:nth-child(1) h2 > span,
 *:target > .titlepage:nth-child(1) h3 > span,
